--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -7,6 +7,11 @@
 	cursor: pointer; 
 	text-decoration:none;
 }
+#keypad gobtn { 
+	display: block; 
+	cursor: pointer; 
+	text-decoration:none;
+}
 .ui-bar {
 	padding:.4em;
 	margin: .3em;
@@ -16,8 +21,8 @@
 	font-family: arial, helvetica, sans-serif;
 	font-size:1em;
 	border-radius: .3em;
-	-moz-border-radius: 3.em;
-	-webkit-border-radius: 3.em;
+	-moz-border-radius: 3em;
+	-webkit-border-radius: 3em;
 }
 .ui-block-a, .ui-block-b, .ui-block-c, .ui-block-d, .ui-block-e {
 	min-height:1.93em;
