Added PhotoSwipe js lib.  Commented out refence in tap.model.js to TourMetadata.  I'll return it shortly.

--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -1,9 +1,9 @@
 #keypad { 
 	margin: .1em;
 }
-#keypad keybtn { 
+#keypad button { 
 	display: block; 
-	width: 100%; 
+	width: 98%; 
 	cursor: pointer; 
 	text-decoration:none;
 }
@@ -43,3 +43,9 @@
 	margin-left: auto;
    	margin-right: auto;
 }
+#Gallery { list-style: none; padding: 0; margin: 0; }
+#Gallery:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
+#Gallery li { float: left; width: 33.33333333%; }
+#Gallery li a { display: block; margin: 5px; border: 1px solid #3c3c3c; }
+#Gallery li img { display: block; width: 100%; height: auto; }
+#Gallery1 .ui-content, #Gallery2 .ui-content { overflow: hidden; }
