--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -12,6 +12,9 @@
 	cursor: pointer; 
 	text-decoration:none;
 }
+#error_invalidCode .ui-header a {
+	display: none;
+}
 .ui-bar {
 	padding:.4em;
 	margin: .1em;
@@ -42,6 +45,18 @@
 	display:block;
 	margin-left: auto;
    	margin-right: auto;
+}
+#writeStyle {
+	width:66.4%;
+	border:1px solid #666;
+	background-color: #FFF;
+	border-radius:.3em;
+	-moz-border-radius:.3em;
+	-webkit-border-radius:.3em;
+	margin-top:.3em;height:60px;
+}
+#clearStyle {
+	width:66.55%;
 }
 #Gallery { list-style: none; padding: 0; margin: 0; }
 #Gallery:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
