--- a/js/backbone/templates/video-stop.tpl.html
+++ b/js/backbone/templates/video-stop.tpl.html
@@ -1,7 +1,6 @@
 <div class='video-stop'>
+	<div class='title'><%= tourStopTitle %></div>
 	<video width="95%" controls="controls" autoplay="autoplay" id="videoPlayer" poster="assets/images/tapPoster.png">
-		<source src="<%= tourStopOggVideo %>" type="video/ogg" />
-		<source src="<%= tourStopMp4Video %>" type="video/mp4" />
-		Your browser does not support the video tag.
+		<p>Your browser does not support the video tag.</p>
 	</video>
 </div>
