--- a/js/backbone/templates/audio-stop.tpl.html
+++ b/js/backbone/templates/audio-stop.tpl.html
@@ -1,6 +1,9 @@
-<div class='audio-stop'>
+<div class='tour-stop audio'>
 	<div class='title'><%= tourStopTitle %></div>
-	<audio autoplay controls="controls" id="audioPlayer" style="width:100%">
+	<audio id="audio-player" autoplay controls="controls">
 		<p>Your browser does not support the audio element.</p>
-	</audio>
+	</audio>	
+	<video id="video-player" autoplay controls="controls" style='display:none;'>
+		<p>Your browser does not support the video element.</p>
+	</video>
 </div>
