--- a/js/backbone/templates/video-stop.tpl.html
+++ b/js/backbone/templates/video-stop.tpl.html
@@ -1,6 +1,6 @@
-<div class='video-stop'>
+<div class='tour-stop video'>
 	<div class='title'><%= tourStopTitle %></div>
-	<video width="95%" controls="controls" autoplay="autoplay" id="videoPlayer" poster="assets/images/tapPoster.png">
+	<video id="video-player" poster="assets/images/tapPoster.png" controls="controls" autoplay="autoplay">
 		<p>Your browser does not support the video tag.</p>
 	</video>
 </div>
