Displaying distance within the stop marker info

--- a/js/backbone/templates/tour-map-marker-bubble.tpl.html
+++ b/js/backbone/templates/tour-map-marker-bubble.tpl.html
@@ -1,5 +1,6 @@
 <div class='marker-bubble-content'>
 	<div class='title'><%= title %></div>
+	<div class='distance'><%= distance %></div>
 	<div class='view-button'><a href='#tourstop/<%= tour_id %>/<%= stop_id %>'>View stop</a></div>
 	<div class='directions'>Get Directions</div>
 </div>
