Implemented page inheritance and jqMobile page template

--- a/js/backbone/templates/keypad.tpl.html
+++ b/js/backbone/templates/keypad.tpl.html
@@ -1,4 +1,4 @@
-<fieldset class="ui-grid-b" id="keypad">
+<fieldset class="ui-grid-b" id="keypad" data-theme='d'>
 	<div class="ui-block-a" id="writeStyle">
 		<div class="ui-bar" id="write"></div>
 	</div>
