--- a/js/backbone/templates/stop-group.tpl.html
+++ b/js/backbone/templates/stop-group.tpl.html
@@ -1,4 +1,4 @@
-<div class='stop-group' style="width:100%;">
+<div class='tour-stop stop-group' style="width:100%;">
 	<div class='title'><%= tourStopTitle %></div>
 	<div class='description'><%= description %></div>
 	<ul id="stop-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
