Enhanced index selector
Active index is indicated, default index can be set, and the tour stop
index can be set to only show stops with codes

--- a/js/backbone/templates/page.tpl.html
+++ b/js/backbone/templates/page.tpl.html
@@ -3,7 +3,7 @@
 	<% if (header_nav) { %>
 	<div id='index-selector' class='ui-title' data-role="controlgroup" data-type="horizontal" data-mini="true">
 		<% _.each(nav_menu, function(item) { %>
-		<a data-role="button" href='#<%= item.prefix %>/<%= tour_id %>'><%= item.label %></a>
+		<a data-role="button" <%= (active_index == item.prefix) ? 'data-theme="b"' : "" %> href='#<%= item.prefix %>/<%= tour_id %>'><%= item.label %></a>
 		<% }); %>
 	</div>
 	<% } else { %>
