--- a/js/backbone/templates/tour-details.tpl.html
+++ b/js/backbone/templates/tour-details.tpl.html
@@ -1,5 +1,5 @@
 <div class="">			
-	<a href="#tourkeypad/<%= tour_id %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
+	<a href="#<%= tour_index %>/<%= tour_id %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
 </div>
 <div class='tour-details'>
 	<%= description %>
