Fixed the keypad style

--- a/js/backbone/templates/keypad.tpl.html
+++ b/js/backbone/templates/keypad.tpl.html
@@ -5,16 +5,16 @@
 	<div class="ui-block-b">
 		<div class="ui-bar ui-bar-d" id="gobtn">Go</div>	
 	</div>
-	<div class="ui-block-a"><button class="ui-bar ui-bar-d">1</button></div>
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">2</button></div>	 
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">3</button></div>  
-	<div class="ui-block-a"><button class="ui-bar ui-bar-d">4</button></div>
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">5</button></div>	 
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">6</button></div>  
-	<div class="ui-block-a"><button class="ui-bar ui-bar-d">7</button></div>
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">8</button></div>	 
-	<div class="ui-block-b"><button class="ui-bar ui-bar-d">9</button></div>  
-	<div class="ui-block-a"><button class="ui-bar ui-bar-d">0</button></div>
+	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">1</div></div>
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">2</div></div>	 
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">3</div></div>  
+	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">4</div></div>
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">5</div></div>	 
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">6</div></div>  
+	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">7</div></div>
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">8</div></div>	 
+	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">9</div></div>  
+	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">0</div></div>
 	<div class="ui-block-b" id="clearStyle">
 		<div class="ui-bar ui-bar-d" id="delete">Clear</div>
 	</div>
