Fixing header to the top of the screen

--- a/js/backbone/templates/page.tpl.html
+++ b/js/backbone/templates/page.tpl.html
@@ -1,4 +1,4 @@
-<div data-role="header">
+<div data-role="header" data-position="fixed">
 	<a id='back-button' data-rel="back"><%= back_label %></a>
 	<% if (header_nav) { %>
 	<div id='index-selector' class='ui-title' data-role="controlgroup" data-type="horizontal" data-mini="true">
