--- a/js/backbone/templates/page.tpl.html
+++ b/js/backbone/templates/page.tpl.html
@@ -1,7 +1,7 @@
 <div data-role="header" data-position="fixed">
 	<a id='back-button' data-rel="back" data-mini="true"><%= back_label %></a>
 	<% if (header_nav) { %>
-	<div id='index-selector' class='ui-title' data-role="controlgroup" data-type="horizontal" data-mini="true">
+	<div id='index-selector' data-role="controlgroup" data-type="horizontal" data-mini="true">
 		<% _.each(nav_menu, function(item) { %>
 		<a data-role="button" <%= (active_index == item.prefix) ? 'data-theme="b"' : "" %> href='#<%= item.prefix %>/<%= tour_id %>'><%= item.label %></a>
 		<% }); %>
