Stop updates for latest TourML changes and model changes

--- a/js/backbone/templates/image-stop.tpl.html
+++ b/js/backbone/templates/image-stop.tpl.html
@@ -1,4 +1,2 @@
-<div id="soloImage">
-	<a href="<%= tourImageUri %>"><img src="<%= tourImageUri %>" alt="Image 01" class="primaryImg" /></a>
-	<div class='title'><%= tourStopTitle %></div>
-</div>
+<ul id="gallery">
+</ul>
