--- a/js/backbone/templates/tour-map-marker-bubble.tpl.html
+++ b/js/backbone/templates/tour-map-marker-bubble.tpl.html
@@ -2,5 +2,7 @@
 	<div class='title'><%= title %></div>
 	<div class='distance'><%= distance %></div>
 	<div class='view-button'><a href='#tourstop/<%= tour_id %>/<%= stop_id %>'>View stop</a></div>
-	<div class='directions'>Get Directions</div>
+	<div class='directions'>
+		<a href='http://maps.google.com/maps?saddr=Current%20Location&daddr=<%= stop_lat %>,<%= stop_lon %>'>Get Directions</a>
+	</div>
 </div>
