--- a/js/backbone/templates/tour-stop-list.tpl.html
+++ b/js/backbone/templates/tour-stop-list.tpl.html
@@ -1,1 +1,4 @@
 <ul id="tour-stop-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
+<% if (enable_proximity_order) { %>
+<div id='proximity-toggle' data-role='button'>Order by distance</div>
+<%}%>
