--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -48,6 +48,21 @@
 	font-weight: bold;
 }
 
+#tour-map .stop-icon {
+	background-image: url('../images/marker.png') !important;
+	width: 25px !important;
+	height: 41px !important;
+	margin-left: -12px !important;
+	margin-top: -41px !important;
+}
+
+#tour-map .location-icon {
+	background-image: url('../images/icon-locate.png') !important;
+	width: 24px !important;
+	height: 24px !important;
+	margin-left: -12px !important;
+	margin-top: -12px !important;
+}
 
 #error_invalidCode .ui-header a {
 	display: none;
