--- a/js/backbone/templates/tour-stop-list-item.tpl.html
+++ b/js/backbone/templates/tour-stop-list-item.tpl.html
@@ -1,1 +1,5 @@
-<a href='#tourstop/<%= tour_id %>/<%= stop_id %>'><%= title %></a>
+<a href='#tourstop/<%= tour_id %>/<%= stop_id %>'><%= title %>
+<% if (distance !== '') { %>
+<span class='distance'><%= distance %></span>
+<% } %>
+</a>
