--- a/js/backbone/templates/tour-stop-list.tpl.html
+++ b/js/backbone/templates/tour-stop-list.tpl.html
@@ -1,4 +1,10 @@
 <ul id="tour-stop-list" class="ui-listview" data-inset="true" data-role="listview"></ul>
 <% if (enable_proximity_order) { %>
-<div id='proximity-toggle' data-role='button'>Order by distance</div>
+<div data-role="fieldcontain" id='proximity-container'>
+<label for="proximity-toggle">Distance ordering:</label>
+<select name="proximity-toggle" id="proximity-toggle" data-role="slider">
+	<option value="off">Off</option>
+	<option value="on">On</option>
+</select> 
+</div>
 <%}%>
