Initial implementation of the audio stop poster image
TAP-74

--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -180,6 +180,10 @@
 	height: 20px;
 }
 
+.tour-stop.audio .poster-image {
+	width: 100%;
+}
+
 /*** Video Stops ***/
 #video-player {
 	width: 100%;
