--- a/js/backbone/templates/image-stop-item.tpl.html
+++ b/js/backbone/templates/image-stop-item.tpl.html
@@ -1,3 +1,4 @@
-<li>
-	<a href="<%= fullImageUri %>"><img src="<%= thumbUri %>" alt="<%= title %>" title="<%= title %>" /></a>
-</li>
+	<li>
+		<a href="<%= fullImageUri %>"><img src="<%= thumbUri %>" alt="<%= title %>" title="<%= title %>" /></a>
+		<div><%= title %></div>
+	</li>
