--- a/js/backbone/templates/image-stop-item.tpl.html
+++ b/js/backbone/templates/image-stop-item.tpl.html
@@ -1,4 +1,4 @@
 	<li>
-		<a href="<%= fullImageUri %>"><img src="<%= thumbUri %>" alt="<%= title %>" title="<%= title %>" /></a>
+		<a href="<%= fullImageUri %>" rel="external"><img src="<%= thumbUri %>" alt="<%= title %>" title="<%= title %>" /></a>
 		<div><%= title %></div>
 	</li>
