Upgraded to jqmobile 1.1.1
Also moved external libs into base external directory

--- a/css/tapweb.css
+++ b/css/tapweb.css
@@ -20,7 +20,10 @@
 .ui-header #index-selector {
 	margin: 0.6em 20% 0.8em;
 	width: 60%;
-	text-align: center;
+}
+
+.ui-header #index-selector .ui-controlgroup-controls {
+	margin: auto;
 }
 
 .ui-header .ui-title {
