--- a/js/backbone/templates/audio-stop.tpl.html
+++ b/js/backbone/templates/audio-stop.tpl.html
@@ -1,8 +1,8 @@
 <div class='tour-stop audio'>
 	<div class='title'><%= tour_stop_title %></div>
-	<audio id="audio-player" autoplay controls="controls">
+	<audio id="audio-player" controls="controls">
 		<p>Your browser does not support the audio element.</p>
-	</audio>	
+	</audio>
 	<video id="video-player" autoplay controls="controls" style='display:none;'
 	<% if (poster_image_path !== null) { %>
 		poster='<%= poster_image_path %>'
@@ -16,5 +16,5 @@
 	<% if (transcription !== null) { %>
 		<div id='trans-button' data-role='button' class='ui-mini'>Show Transcription</div>
 		<div class='transcription hidden'><p><%= transcription %></p></div>
-	<% } %>	
+	<% } %>
 </div>
