--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -1,6 +1,4 @@
-<div class="">			
-	<a href="#<%= tour_index %>/<%= tour_id %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
-</div>
 <div class='tour-details'>
 	<%= description %>
 </div>
+<a href="#<%= defaultStopSelectionView %>/<%= tourID %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
