--- a/templates/footer.tpl.html
+++ b/templates/footer.tpl.html
@@ -1,10 +1,7 @@
-<div data-role="footer" data-id="foo1" data-position="fixed">
-	<div data-role="navbar">
-		<ul>
-			<li><a href="a.html">Info</a></li>
-			<li><a href="b.html">Friends</a></li>
-			<li><a href="c.html">Albums</a></li>
-			<li><a href="d.html">Emails</a></li>
-		</ul>
-	</div>
+<div data-role="navbar">
+	<ul>
+		<li><a href="a.html">Keypad</a></li>
+		<li><a href="b.html">Stops</a></li>
+		<li><a href="c.html">Map</a></li>
+	</ul>
 </div>
