--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,21 +1,41 @@
 <fieldset class="ui-grid-b" id="keypad" data-theme='d'>
-	<div class="ui-block-a" id="writeStyle">
-		<div class="ui-bar" id="write"></div>
-	</div>
-	<div class="ui-block-b">
-		<div class="ui-bar ui-bar-d" id="gobtn">Go</div>	
-	</div>
-	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">1</div></div>
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">2</div></div>	 
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">3</div></div>  
-	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">4</div></div>
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">5</div></div>	 
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">6</div></div>  
-	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">7</div></div>
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">8</div></div>	 
-	<div class="ui-block-b"><div class="button ui-bar ui-bar-d">9</div></div>  
-	<div class="ui-block-a"><div class="button ui-bar ui-bar-d">0</div></div>
-	<div class="ui-block-b" id="clearStyle">
-		<div class="ui-bar ui-bar-d" id="delete">Clear</div>
-	</div>
+    <div class="ui-block-a" id="writeStyle">
+        <div class="ui-bar" id="code"></div>
+    </div>
+    <div class="ui-block-b">
+        <div class="ui-bar ui-bar-d" id="gobtn">Go</div>
+    </div>
+    <div class="ui-block-a">
+        <div class="button ui-bar ui-bar-d">1</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">2</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">3</div>
+    </div>
+    <div class="ui-block-a">
+        <div class="button ui-bar ui-bar-d">4</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">5</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">6</div>
+    </div>
+    <div class="ui-block-a">
+        <div class="button ui-bar ui-bar-d">7</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">8</div>
+    </div>
+    <div class="ui-block-b">
+        <div class="button ui-bar ui-bar-d">9</div>
+    </div>
+    <div class="ui-block-a">
+        <div class="button ui-bar ui-bar-d">0</div>
+    </div>
+    <div class="ui-block-b" id="clearStyle">
+        <div class="ui-bar ui-bar-d" id="delete">Clear</div>
+    </div>
 </fieldset>
