--- a/templates/footer.tpl.html
+++ b/templates/footer.tpl.html
@@ -1,7 +1,13 @@
 <div data-role="navbar">
 	<ul>
-		<li><a href="a.html">Keypad</a></li>
-		<li><a href="b.html">Stops</a></li>
-		<li><a href="c.html">Map</a></li>
+		<li>
+			<a href="#tour/<%= tourID %>/keypad">Keypad</a>
+		</li>
+		<li>
+			<a href="#tour/<%= tourID %>/stop-list">Stops</a>
+		</li>
+		<li>
+			<a href="#tour/<%= tourID %>/map">Map</a>
+		</li>
 	</ul>
 </div>
