--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -1,4 +1,4 @@
 <div class='tour-details'>
 	<%= description %>
 </div>
-<a href="#<%= defaultStopSelectionView %>/<%= tourID %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
+<a href="#tour/<%= tourID %>/<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
