--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,9 +1,9 @@
 <fieldset class="ui-grid-b" id="keypad" data-theme='d'>
     <div class="ui-block-a" id="writeStyle">
-        <div class="ui-bar" id="code"></div>
+        <div class="ui-bar" id="code-label"></div>
     </div>
     <div class="ui-block-b">
-        <div class="ui-bar ui-bar-d" id="gobtn">Go</div>
+        <div class="ui-bar ui-bar-d ui-disabled" id="go-btn">Go</div>
     </div>
     <div class="ui-block-a">
         <div class="button ui-bar ui-bar-d">1</div>
