--- a/css/main.css
+++ b/css/main.css
@@ -1,75 +1,7 @@
-.ui-header #index-selector {
-	margin: 0.6em 20% 0.8em;
-	width: 60%;
+.ui-page-footer-fixed {
+	padding-bottom: 0 !important;
 }
-
-.ui-header #index-selector .ui-controlgroup-controls {
-	margin: auto;
-}
-
-#proximity-toggle-label {
-	float: left;
-	margin-top: 0.5em;
-	font-size: 110%;
-	margin-left: 5px;
-}
-
-#proximity-container {
-	border-bottom: none;	
-}
-
-#proximity-container .ui-slider-switch {
-	float: right;
-}
-
-.map-content {
-	margin: 0px;
-	padding: 0px;
-}
-
-#tour-map {
-	width: 100%;
-	height: 100%;
-}
-
-#tour-map .marker-bubble-content .title {
-	font-weight: bold;
-}
-
-#tour-map .stop-icon {
-	background-image: url('images/marker.png') !important;
-	width: 25px !important;
-	height: 41px !important;
-	margin-left: -12px !important;
-	margin-top: -41px !important;
-}
-
-#tour-map .distance-label-container {
-	font-size: 12px;
-	margin-top: -15px;
-	width: 60px;
-	margin-left: -18px;
-	text-align: center;
-}
-
-#tour-map .distance-label {
-	background-color: #ccc;
-	border-radius: 3px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;	
-}
-
-#tour-map .location-icon {
-	background-image: url('images/icon-locate.png') !important;
-	width: 24px !important;
-	height: 24px !important;
-	margin-left: -12px !important;
-	margin-top: -12px !important;
-}
-
-#error_invalidCode .ui-header a {
-	display: none;
-}
+/* Keypad View */
 .ui-bar {
 	padding:.4em;
 	margin: .1em;
@@ -82,44 +14,20 @@
 	-moz-border-radius: .3em;
 	-webkit-border-radius: .3em;
 }
-.ui-bar:active {
-	background:#33CCFF;
-}
-.ui-block-a, .ui-block-b, .ui-block-c, .ui-block-d, .ui-block-e {
-	min-height:1.93em;
-}
-.ui-content stoptitle {
-	color:#666;
-	font-weight:bold;
-}
-.ui-content stopdescription{
-	color:#666;
-}
 
-.primaryImg {
-	display:block;
-	margin-left: auto;
-   	margin-right: auto;
-}
 #writeStyle {
 	width:66.4%;
-	border:1px solid #666;
+	border: 1px solid #666;
 	background-color: #FFF;
+	margin-top: .3em;
+	height: 60px;
 	border-radius:.3em;
 	-moz-border-radius:.3em;
 	-webkit-border-radius:.3em;
-	margin-top:.3em;height:60px;
 }
 #clearStyle {
 	width:66.55%;
 }
-#Gallery { list-style: none; padding: 0; margin: 0; }
-#Gallery:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
-#Gallery li { float: left; width: 33.33333333%; }
-/* #Gallery li a { display: block; margin: 5px; border: 1px solid #3c3c3c; } */
-#Gallery li img { display: block; height: auto; margin:auto;} 
-#Gallery1 .ui-content, #Gallery2 .ui-content { overflow: hidden; }
-
 
 /*** Stop List View ***/
 
@@ -137,6 +45,16 @@
 	-webkit-border-radius:.3em;	
 }
 
+/* Map View */
+#tour-map {
+	width: 100%;
+	height: 100%;
+}
+
+.leaflet-top, .leaflet-bottom {
+	z-index: 999 !important;
+}
+
 /*** Tour Stops ***/
 
 .tour-stop .title {
@@ -150,29 +68,17 @@
 
 
 /*** Audio Stops ***/
-#audio-player {
+#audio-stop {
 	width: 100%;
 }
 
-#audio-player.audio-only {
-	height: 20px;
-}
-
-.tour-stop.audio .poster-image {
+#audio-stop .poster-image {
 	width: 100%;
 }
 
 /*** Video Stops ***/
-#video-player {
+#video-stop .player {
 	width: 100%;
-}
-
-#trans-button {
-	width: 50%;
-}
-
-.transcription.hidden {
-	display: none;
 }
 
 /* Image Stop */
