--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -11,7 +11,7 @@
     <div class="ui-block-b">
         <div class="button ui-bar ui-bar-d">2</div>
     </div>
-    <div class="ui-block-b">
+    <div class="ui-block-c">
         <div class="button ui-bar ui-bar-d">3</div>
     </div>
     <div class="ui-block-a">
@@ -20,7 +20,7 @@
     <div class="ui-block-b">
         <div class="button ui-bar ui-bar-d">5</div>
     </div>
-    <div class="ui-block-b">
+    <div class="ui-block-c">
         <div class="button ui-bar ui-bar-d">6</div>
     </div>
     <div class="ui-block-a">
@@ -29,7 +29,7 @@
     <div class="ui-block-b">
         <div class="button ui-bar ui-bar-d">8</div>
     </div>
-    <div class="ui-block-b">
+    <div class="ui-block-c">
         <div class="button ui-bar ui-bar-d">9</div>
     </div>
     <div class="ui-block-a">
