--- a/templates/footer.tpl.html
+++ b/templates/footer.tpl.html
@@ -1,13 +1,7 @@
-<div data-role="navbar">
+<div data-role="navbar" data-iconpos="top">
 	<ul>
-		<li>
-			<a href="#tour/<%= tourID %>/keypad">Keypad</a>
-		</li>
-		<li>
-			<a href="#tour/<%= tourID %>/stop-list">Stops</a>
-		</li>
-		<li>
-			<a href="#tour/<%= tourID %>/map">Map</a>
-		</li>
+		<li><a href="#tour/<%= tourID %>/keypad" data-icon="keypad" data-iconshadow="true">Keypad</a></li>
+		<li><a href="#tour/<%= tourID %>/stop-list" data-icon="stop-list" data-iconshadow="true">Stops</a></li>
+		<li><a href="#tour/<%= tourID %>/map" data-icon="map" data-iconshadow="true">Map</a></li>
 	</ul>
 </div>
