--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,41 +1,41 @@
-<fieldset class="ui-grid-b" id="keypad" data-theme='d'>
-    <div class="ui-block-a" id="writeStyle">
-        <div class="ui-bar" id="code-label"></div>
+<fieldset class="ui-grid-b" id="keypad">
+    <div class="ui-block-a" id="code-label-wrapper">
+        <div id="code-label"></div>
     </div>
     <div class="ui-block-b">
-        <div class="ui-bar ui-bar-d ui-disabled" id="go-btn">Go</div>
+        <div id="go-button" data-role="button" data-theme="b" class="action-button ui-disabled">Go</div>
     </div>
     <div class="ui-block-a">
-        <div class="button ui-bar ui-bar-d">1</div>
+        <div data-role="button" data-theme="a" class="keypad-button">1</div>
     </div>
     <div class="ui-block-b">
-        <div class="button ui-bar ui-bar-d">2</div>
+        <div data-role="button" data-theme="a" class="keypad-button">2</div>
     </div>
     <div class="ui-block-c">
-        <div class="button ui-bar ui-bar-d">3</div>
+        <div data-role="button" data-theme="a" class="keypad-button">3</div>
     </div>
     <div class="ui-block-a">
-        <div class="button ui-bar ui-bar-d">4</div>
+        <div data-role="button" data-theme="a" class="keypad-button">4</div>
     </div>
     <div class="ui-block-b">
-        <div class="button ui-bar ui-bar-d">5</div>
+        <div data-role="button" data-theme="a" class="keypad-button">5</div>
     </div>
     <div class="ui-block-c">
-        <div class="button ui-bar ui-bar-d">6</div>
+        <div data-role="button" data-theme="a" class="keypad-button">6</div>
     </div>
     <div class="ui-block-a">
-        <div class="button ui-bar ui-bar-d">7</div>
+        <div data-role="button" data-theme="a" class="keypad-button">7</div>
     </div>
     <div class="ui-block-b">
-        <div class="button ui-bar ui-bar-d">8</div>
+        <div data-role="button" data-theme="a" class="keypad-button">8</div>
     </div>
     <div class="ui-block-c">
-        <div class="button ui-bar ui-bar-d">9</div>
+        <div data-role="button" data-theme="a" class="keypad-button">9</div>
     </div>
     <div class="ui-block-a">
-        <div class="button ui-bar ui-bar-d">0</div>
+        <div data-role="button" data-theme="a" class="keypad-button">0</div>
     </div>
-    <div class="ui-block-b" id="clearStyle">
-        <div class="ui-bar ui-bar-d" id="delete">Clear</div>
+    <div class="ui-block-b ui-block-c" id="clear-button-wrapper">
+        <div id="clear-button" data-role="button" data-theme="b" class="action-button">Clear</div>
     </div>
 </fieldset>
