--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -1,4 +1,2 @@
-<div class='tour-details'>
-	<%= description %>
-</div>
+<p><%= description %></p>
 <a href="#tour/<%= tourID %>/<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
