--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,6 +1,8 @@
 <fieldset class="ui-grid-b" id="keypad">
-    <div class="ui-block-a" id="code-label-wrapper">
-        <div id="code-label"></div>
+    <div id="code-label-wrapper" class="ui-block-a">
+        <div id="code-label-border">
+            <div id="code-label"></div>
+        </div>
     </div>
     <div class="ui-block-b">
         <div id="go-button" data-role="button" data-theme="b" class="action-button ui-disabled">Go</div>
