--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,18 @@
 .ui-header .ui-title {
 	margin: .6em 20% .8em;
 }
+
 /* Footer */
 #footer .ui-icon {
 	top: 6px;
 	width: 26px!important;
 	height: 26px!important;
 	margin-left: -14px !important;
-	box-shadow: none!important;
 	-moz-box-shadow: none!important;
 	-webkit-box-shadow: none!important;
+	box-shadow: none!important;
 	-webkit-border-radius: 0 !important;
+	-moz-border-radius: 0 !important;
 	border-radius: 0 !important;
 }
 #footer .ui-btn-inner {
@@ -29,7 +31,8 @@
 	background: url(../images/map-white.png) 0 0 no-repeat;
 	background-size: 26px 26px;
 }
-/* Keypad View */
+
+/* Keypad */
 #keypad {
 	padding-top: -10px;
 }
@@ -44,9 +47,9 @@
 	padding: .3em;
 	margin: .1em;
 	font-size: 2em;
-	border-radius: .3em;
 	-moz-border-radius: .3em;
 	-webkit-border-radius: .3em;
+	border-radius: .3em;
 }
 
 #go-button .ui-btn-inner {
@@ -72,32 +75,35 @@
 	background-color: #FFF;
 	margin-top: .3em;
 	height: 56px;
-	border-radius: .3em;
 	-moz-border-radius: .3em;
 	-webkit-border-radius: .3em;
+	border-radius: .3em;
 }
 
 #clear-button-wrapper {
 	width:66.55%;
 }
 
-/*** Stop List View ***/
-
-#tour-stop-list span.distance {
+/* Stop List View */
+#tour-stop-list .distance {
 	float: right;
 	margin-right: 1em;
 	padding: 0.3em;
 	font-size: 0.8em;
 }
 
-#tour-stop-list li.nearest span.distance {
+#tour-stop-list .nearest .distance {
 	background-color: #7FBCE5;
+	-moz-border-radius: .3em;
+	-webkit-border-radius: .3em;
 	border-radius:.3em;
-	-moz-border-radius:.3em;
-	-webkit-border-radius:.3em;
 }
 
 /* Map View */
+#content-wrapper.tour-map {
+	padding: 0;
+}
+
 #tour-map {
 	width: 100%;
 	height: 100%;
@@ -165,5 +171,5 @@
 
 /* Hide weird characters that appear after grunt contatenation */
 .ui-icon.ui-icon-arrow-r.ui-icon-shadow {
-	text-indent: -9999px;
+	text-indent: 9999px;
 }
